<resources>
    <string name="app_name">邮易</string>

    <!-- loginF -->
    <string name="login_title">邮易，简单快捷的校园交易</string>
    <string name="phone_number">请输入手机号码</string>
    <string name="password_number">请输入学号</string>
    <string name="already_read_and_agree">已阅读并同意</string>
    <string name="environment_policy">《环保协议》</string>
    <string name="line_info">举报监督电话 ｜ 服务许可 ｜ 营业执照</string>
    <string name="forget_password">忘记学号？</string>
    <string name="location_number">+86</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="enter_YouYi">进入邮易</string>
    <string name="do_not_want_account">不想注册账号么？试试游客模式</string>

    <!-- forgetF -->
    <string name="forget">忘记密码</string>
    <string name="find_back">获取验证码以找回</string>
    <string name="verify_code">输入验证码</string>
    <string name="not_received">没有收到？</string>
    <string name="your_verify_code_is">您的验证码是</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_test_fragment">Hello test fragment</string>

    <!-- splashAc -->
    <string name="NAME">邮  易</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main_content">MainContentActivity</string>

    <!-- bottomNav -->
    <string name="title_home">Home</string>
    <string name="title_donate">Donate</string>
    <string name="title_message">Message</string>
    <string name="title_me">Me</string>

    <!-- HomeFg -->
    <string name="discover">发现</string>
    <string name="discover_description">最近有哪些好东西呢</string>

    <!-- DonateFg -->
    <string name="donate">圈子</string>
    <string name="donate_description">快来看看毕业圈里的精选好物吧</string>


    <!-- DetailFg -->
    <string name="edit_detail">资料编辑</string>
    <string name="edit_detail_name">昵称</string>
    <string name="edit_detail_name_input_hint">请输入昵称</string>
    <string name="edit_detail_sign">个性签名</string>
    <string name="edit_detail_sign_input_hint">请输入个性签名</string>
    <string name="edit_detail_qq_number">QQ</string>
    <string name="edit_detail_qq_input_hint">完善你的个人信息噢</string>
    <string name="edit_detail_phone_number">电话</string>
    <string name="edit_detail_phone_input_hint">完善你的个人信息噢</string>
    <string name="edit_detail_institute">学院</string>
    <string name="edit_detail_institute_input_hint">请输入学院名称</string>
    <string name="edit_detail_save_button_text">保存</string>

    <!-- meFg -->
    <string name="me_fragment_name">student</string>
    <string name="me_fragment_life_state">说说最近的生活状态吧</string>
    <string name="me_fragment_today_dynamic">今日动态</string>
    <string name="me_fragment_calendar_day">Tue</string>
    <string name="me_fragment_calendar_month">03.29</string>
    <string name="me_fragment_prefer_settings">偏好设置</string>
    <string name="me_fragment_suggest">鼓励建议</string>
    <string name="me_fragment_version">版本信息</string>
    <string name="me_fragment_other">其他</string>
    <string name="me_fragment_default_zero">0</string>
    <string name="me_fragment_all_dynamic">动态</string>
    <string name="me_fragment_all_comments">评论</string>
    <string name="me_fragment_all_get_star">获赞</string>
    <string name="me_fragment_record_ontime">快去发动态获取新的评论和点赞吧！</string>
    <string name="me_fragment_dialog_known">知道啦</string>


    <string name="title_activity_detail">DetailActivity</string>
    <string name="me_fragment_dialog_hint">提示</string>
    <string name="prefer_title">偏好设置</string>
    <string name="prefer_touch_vibrate">触感震动</string>
    <string name="donate_fragment_more">更多</string>
    <string name="me_fragment_ver_info">v1.0.0</string>

    <!-- OtherAc -->
    <string name="title_activity_other">OtherActivity</string>
    <string name="other_activity_title">其他信息</string>
    <string name="other_activity_sdk">接入SDK目录</string>

    <string name="other_activity_rxjava">RxJava</string>
    <string name="other_activity_rxjava_ver">version 3.0.0</string>
    <string name="other_activity_rxjava_des">函数响应式框架，主要用于网络请求等功能的快速封装</string>

    <string name="other_activity_kotlin">Kotlin</string>
    <string name="other_activity_kotlin_ver">version 1.6.0</string>
    <string name="other_activity_kotlin_desc">新式Android编程语言，有多样的语法糖和新特性快速搭建App</string>

    <string name="other_activity_navigation">Navigation</string>
    <string name="other_activity_navigation_ver">version 2.0.0</string>
    <string name="other_activity_navigation_desc">Jetpack工具包下导航类，用于App内各界面跳转导航</string>

    <string name="other_activity_compose">Compose</string>
    <string name="other_activity_compose_ver">version 1.0.1</string>
    <string name="other_activity_compose_desc">Jetpack工具包下声明式UI，提供多样的MD风格控件</string>

    <string name="other_activity_circle">CircleImage</string>
    <string name="other_activity_circle_ver">version 3.0.1</string>
    <string name="other_activity_circle_desc">Github开源库，提供便捷的图片Mask样式</string>

    <string name="other_activity_okhttp">OkHttp</string>
    <string name="other_activity_okhttp_ver">version 3.4.1</string>
    <string name="other_activity_okhttp_desc">Squareup开源库，提供简便的网络请求框架</string>

    <string name="other_activity_glide">Glide</string>
    <string name="other_activity_glide_ver">version 4.1.0</string>
    <string name="other_activity_glide_desc">Github开源库，提供便捷的图片加载API</string>

    <string name="other_activity_retrofit">Retrofit</string>
    <string name="other_activity_retrofit_ver">version 2.5.0</string>
    <string name="other_activity_retrofit_desc">Squareup开源库，抽象OkHttp请求API，开发更便捷</string>

    <string name="other_activity_room">Room</string>
    <string name="other_activity_room_ver">version 2.4.1</string>
    <string name="other_activity_room_description">Jetpack工具包下持久化存储库，类Mysql的关系型数据库，简化数据库操作</string>

    <string name="other_activity_permission">申请权限目录</string>

    <string name="other_activity_vibrate">VIBRATE</string>
    <string name="other_activity_vibrate_desc">震动权限，开启后可感受到点击时的震动效果</string>

    <string name="other_activity_internet">INTERNET</string>
    <string name="other_activity_internet_desc">网络使用权限，开启后可在App内使用网络</string>

    <string name="other_activity_network">NETWORK</string>
    <string name="other_activity_network_desc">网络状态权限，开启后可感知网络状态变化</string>

    <string name="other_activity_wifi">WIFI</string>
    <string name="other_activity_wifi_desc">Wifi权限，开启后可感知Wifi状态</string>

    <string name="other_activity_read">READ</string>
    <string name="other_activity_read_desc">读取SD卡权限，开启后可读取本地文件</string>

    <string name="other_activity_write">WRITE</string>
    <string name="other_activity_write_desc">写入SD卡权限，开启后可修改本地文件</string>
    <string name="forget_fragment_your_password_is">您的密码是</string>
    <string name="fragment_me_quit_button">退出登陆</string>

    <string name="donate_dialog_title">猜你想发：</string>
    <string name="new_price_text">新的二手商品</string>
    <string name="new_free_text">新的赠送商品</string>
    <string name="item_contact_him">联系TA</string>
    <string name="sale_good_input_name">请输入商品名称</string>
    <string name="good_name_title">商品名称: </string>
    <string name="good_price_title">商品价格: </string>
    <string name="sale_good_input_price">请输入商品价格</string>
    <string name="good_image_title">商品图片: </string>
    <string name="good_description_title">商品描述: </string>
    <string name="good_publish">发布</string>
    <string name="publish_good_info">商品信息</string>
    <string name="input_good_description">请输入商品描述</string>
    <string name="zero_rmb">¥ 0元</string>
    <string name="sale_info_good_kind">商品种类: </string>
    <string name="sale_info_kind_electric">电子产品</string>
    <string name="sale_info_kind_daily">日用品</string>
    <string name="sale_info_kind_other">其他</string>


    <!-- Strings used for fragments for navigation -->
</resources>