<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".mainPack.donatePack.SaleInfoActivity">

    <RelativeLayout
        android:id="@+id/sale_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sale_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/login_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/publish_good_info"
            android:textColor="@color/login_black"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/good_name_title"
        style="@style/SaleInfoTitleTextView"
        android:text="@string/good_name_title"
        app:layout_constraintBottom_toBottomOf="@+id/input_good_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_good_name" />

    <RelativeLayout
        android:id="@+id/input_good_name"
        style="@style/SaleInfoRelative"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@+id/good_name_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sale_title">

        <EditText
            android:id="@+id/sale_good_input_name"
            style="@style/SaleInfoEditText"
            android:hint="@string/sale_good_input_name"
            android:inputType="text"
            android:maxLength="10" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_good_price"
        style="@style/SaleInfoRelative"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/input_good_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_good_name"
        tools:visibility="visible">

        <EditText
            android:id="@+id/sale_good_input_price"
            style="@style/SaleInfoEditText"
            android:hint="@string/sale_good_input_price"
            android:inputType="number"
            android:maxLength="5" />
    </RelativeLayout>

    <TextView
        android:id="@+id/zero_rmb"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:text="@string/zero_rmb"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@+id/input_good_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_good_name"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/good_image_title"
        style="@style/SaleInfoTitleTextView"
        android:text="@string/good_image_title"
        app:layout_constraintBottom_toBottomOf="@+id/input_good_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_good_image" />

    <ImageView
        android:id="@+id/input_good_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/good_image_input_icon"
        app:layout_constraintLeft_toRightOf="@+id/good_image_title"
        app:layout_constraintTop_toBottomOf="@id/input_good_name" />

    <TextView
        android:id="@+id/good_description_title"
        style="@style/SaleInfoTitleTextView"
        android:text="@string/good_description_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/good_description" />

    <RelativeLayout
        android:id="@+id/good_description"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/login_round_corner_bg"
        app:layout_constraintLeft_toRightOf="@+id/good_description_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_good_image">

        <EditText
            android:id="@+id/input_good_description"
            style="@style/SaleInfoEditText"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="top|start"
            android:hint="@string/input_good_description" />
    </RelativeLayout>

    <com.example.graduateproj.commonUI.RoundCornerButton
        android:id="@+id/publish_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/good_publish"
        android:textColor="@color/login_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/good_description"
        app:rcb_backgroundColorNormal="@color/main_18CAE4"
        app:rcb_backgroundColorPressed="@color/main_6618CAE4"
        app:rcb_cornerRadius="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>